syntax = "proto3";
package package_tracker.v1;

option csharp_namespace = "Whey.Server.Proto";

service PackageTrackerService {
  rpc EnsureTracked(EnsureTrackedRequest) returns (EnsureTrackedResponse); // begin tracking a repository
  rpc ReportInstall(ReportInstallRequest) returns (ReportInstallResponse);
}

message EnsureTrackedRequest {
  string owner = 1;
  string repo = 2;
  string platform = 3;
}

message EnsureTrackedResponse {}

message ReportInstallRequest {
  string owner = 1;
  string repo = 2;
  string platform = 3;
}

message ReportInstallResponse {}
