syntax = "proto3";
package register.v1;

import "google/protobuf/timestamp.proto";

option csharp_namespace = "Whey.Server.Proto";

service RegistrationService {
  rpc Challenge(ChallengeRequest) returns (ChallengeResponse);
  rpc Register(RegisterRequest) returns (RegisterResponse);
}

enum Platform {
  PLATFORM_UNSPECIFIED = 0;
  PLATFORM_LINUX = 1;
  PLATFORM_WINDOWS = 2;
  PLATFORM_DARWIN = 3;
}

message RegisterIntent {
  bytes public_key = 1;
  bytes challenge = 2;
  string version = 3;
  Platform platform = 4;
  string purpose = 5;
  string rpc_method = 6;
}

message RegisterRequest {
  bytes public_key = 1;
  bytes payload_signature = 2; // client signs over RegisterIntent w/ private key
  bytes release_signature = 3;
  string version = 4;
  Platform platform = 5;
  bytes nonce = 6;
  google.protobuf.Timestamp time_stamp = 8;
}

message RegisterResponse {}

message ChallengeRequest {}

message ChallengeResponse {
  string nonce = 1;
  google.protobuf.Timestamp expires_at = 2;
}
